<resources>
    <string name="app_name">Weather App</string>

    <!-- history activity -->
    <string name="history">History</string>
    <string name="take_photo">Select Method</string>
    <string name="select_file">"Select file"</string>

    <string-array name="pick_image_options">
        <item name="take_photo">Take a Photo</item>
        <item name="choose_from_library">Choose from library</item>
        <item name="cancel">Cancel</item>
    </string-array>

    <!-- weather activity -->
    <string name="new_photo">New Photo</string>
    <string name="place_name">Place Name</string>
    <string name="weather_temperature">Weather Temperature...</string>
    <string name="weather_description">Weather Description...</string>
    <string name="save">Save</string>
    <string name="retry">Retry</string>
    <string name="wait_message">please wait until getting current weather load</string>
    <string name="empty_place_name_message">Please enter place name</string>

    <!-- gallery activity -->
    <string name="gallery">Gallery</string>



    <!-- General Messages -->
    <string name="error_message">Something went wrong please try again later</string>
    <string name="connection_error_message">Please check your connection with the internet</string>
</resources>
